--- a/src/stylesheets/MapPageScreenshotViewerStyles.scss
+++ b/src/stylesheets/MapPageScreenshotViewerStyles.scss
@@ -46,6 +46,7 @@ box-shadow: 0px 0px 0px 8px $mediawarx_red;
 
 .marker-modal-image{
     max-width: 100%;
+    height:auto;
 }
 
 
